--- a/css/estilos.css
+++ b/css/estilos.css
@@ -36,7 +36,7 @@ body{
     margin: 0 auto;
 }
 
-#container{
+#container h1{
     font-size: 20px;
 }
 
@@ -45,7 +45,7 @@ body{
     padding: 1em;
 }
 
-footer{
+#footer{
     background: #777;
     color: white;
     text-align: center;
